--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissor Game</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Rock Paper Scissors</h1>
@@ -37,5 +38,6 @@
         <p id="msg">Play your move</p>
     </div>
     
+    <script src="app.js"></script>
 </body>
 </html>
